/*
 * WARNING! All changes made in this file will be lost!
 * Created from 'scheme.tl' by 'mtprotoc'
 *
 * Copyright (c) 2024-present,  Teamgram Authors.
 *  All rights reserved.
 *
 * Author: Benqi (wubenqi@gmail.com)
 */

syntax = "proto3";

package dialog;

import "google/protobuf/wrappers.proto";
import "schema.tl.core_types.proto";
import "schema.tl.transport.proto";
import "schema.tl.sync.proto";

option go_package = "github.com/teamgram/teamgram-server/app/service/biz/dialog/dialog";

enum TLConstructor {
    CRC32_UNKNOWN = 0;
    CRC32_updateDraftMessage = -155335502;
    CRC32_dialogExt = -1109809056;
    CRC32_dialogPinnedExt = 245834284;
    CRC32_dialogFilterExt = -1496016642;
    CRC32_simpleDialogsData = 492418141;
    CRC32_savedDialogList = 2005919834;
    CRC32_dialog_saveDraftMessage = 1321916826;
    CRC32_dialog_clearDraftMessage = -76500326;
    CRC32_dialog_getAllDrafts = -1394716698;
    CRC32_dialog_clearAllDrafts = 1102614780;
    CRC32_dialog_markDialogUnread = 1160941838;
    CRC32_dialog_toggleDialogPin = -2038504145;
    CRC32_dialog_getDialogUnreadMarkList = -893634316;
    CRC32_dialog_getDialogsByOffsetDate = -1652652540;
    CRC32_dialog_getDialogs = -2046091754;
    CRC32_dialog_getDialogsByIdList = -1390049167;
    CRC32_dialog_getDialogsCount = -533089179;
    CRC32_dialog_getPinnedDialogs = -1463673931;
    CRC32_dialog_reorderPinnedDialogs = -18664089;
    CRC32_dialog_getDialogById = -1587594251;
    CRC32_dialog_getTopMessage = -92425614;
    CRC32_dialog_updateReadInbox = 489158840;
    CRC32_dialog_updateReadOutbox = 1483799934;
    CRC32_dialog_insertOrUpdateDialog = 382601889;
    CRC32_dialog_deleteDialog = 28515811;
    CRC32_dialog_getUserPinnedMessage = -1885617487;
    CRC32_dialog_updateUserPinnedMessage = 371388970;
    CRC32_dialog_insertOrUpdateDialogFilter = 178824068;
    CRC32_dialog_deleteDialogFilter = 31276695;
    CRC32_dialog_updateDialogFiltersOrder = -1321465025;
    CRC32_dialog_getDialogFilters = 1818717244;
    CRC32_dialog_getDialogFolder = 1092325045;
    CRC32_dialog_editPeerFolders = 608601754;
    CRC32_dialog_getChannelMessageReadParticipants = 683494715;
    CRC32_dialog_setChatTheme = -374431190;
    CRC32_dialog_setHistoryTTL = 165263532;
    CRC32_dialog_getMyDialogsData = 2128645891;
    CRC32_dialog_getSavedDialogs = 952227432;
    CRC32_dialog_getPinnedSavedDialogs = 1084471271;
    CRC32_dialog_toggleSavedDialogPin = 1156782041;
    CRC32_dialog_reorderPinnedSavedDialogs = -665007150;
    CRC32_dialog_getDialogFilter = -209189348;
    CRC32_dialog_getDialogFilterBySlug = 1313177583;
    CRC32_dialog_createDialogFilter = -959749265;
    CRC32_dialog_updateUnreadCount = 732705613;
}


// DialogExt <--
//  + TL_dialogExt
//
message DialogExt {
    string predicate_name = 1;
    TLConstructor  constructor = 2;
    int64 order = 3;
    mtproto.Dialog dialog = 4;
    int32 available_min_id = 5;
    int64 date = 6;
    string theme_emoticon = 7;
    int32 ttl_period = 8;
}

message TL_dialogExt {
    DialogExt data2 = 1;
}


// DialogFilterExt <--
//  + TL_dialogFilterExt
//
message DialogFilterExt {
    string predicate_name = 1;
    TLConstructor  constructor = 2;
    int32 id = 3;
    bool joined_by_slug = 4;
    string slug = 5;
    mtproto.DialogFilter dialog_filter = 6;
    int64 order = 7;
}

message TL_dialogFilterExt {
    DialogFilterExt data2 = 1;
}


// DialogPinnedExt <--
//  + TL_dialogPinnedExt
//
message DialogPinnedExt {
    string predicate_name = 1;
    TLConstructor  constructor = 2;
    int64 order = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
}

message TL_dialogPinnedExt {
    DialogPinnedExt data2 = 1;
}


// DialogsData <--
//  + TL_simpleDialogsData
//
message DialogsData {
    string predicate_name = 1;
    TLConstructor  constructor = 2;
    repeated int64 users = 3;
    repeated int64 chats = 4;
    repeated int64 channels = 5;
}

message TL_simpleDialogsData {
    DialogsData data2 = 1;
}


// PeerWithDraftMessage <--
//  + TL_updateDraftMessage
//
message PeerWithDraftMessage {
    string predicate_name = 1;
    TLConstructor  constructor = 2;
    mtproto.Peer peer = 3;
    mtproto.DraftMessage draft = 4;
}

message TL_updateDraftMessage {
    PeerWithDraftMessage data2 = 1;
}


// SavedDialogList <--
//  + TL_savedDialogList
//
message SavedDialogList {
    string predicate_name = 1;
    TLConstructor  constructor = 2;
    int32 count = 3;
    repeated mtproto.SavedDialog dialogs = 4;
}

message TL_savedDialogList {
    SavedDialogList data2 = 1;
}





//--------------------------------------------------------------------------------------------
message TL_dialog_saveDraftMessage {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
    mtproto.DraftMessage message = 6;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_clearDraftMessage {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getAllDrafts {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_clearAllDrafts {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_markDialogUnread {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
    mtproto.Bool unread_mark = 6;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_toggleDialogPin {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
    mtproto.Bool pinned = 6;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getDialogUnreadMarkList {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getDialogsByOffsetDate {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    mtproto.Bool exclude_pinned = 4;
    int32 offset_date = 5;
    int32 limit = 6;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getDialogs {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    mtproto.Bool exclude_pinned = 4;
    int32 folder_id = 5;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getDialogsByIdList {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    repeated int64 id_list = 4;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getDialogsCount {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    mtproto.Bool exclude_pinned = 4;
    int32 folder_id = 5;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getPinnedDialogs {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 folder_id = 4;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_reorderPinnedDialogs {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    mtproto.Bool force = 4;
    int32 folder_id = 5;
    repeated int64 id_list = 6;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getDialogById {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getTopMessage {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_updateReadInbox {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
    int32 read_inbox_id = 6;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_updateReadOutbox {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
    int32 read_outbox_id = 6;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_insertOrUpdateDialog {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
    google.protobuf.Int32Value top_message = 6;
    google.protobuf.Int32Value read_outbox_max_id = 7;
    google.protobuf.Int32Value read_inbox_max_id = 8;
    google.protobuf.Int32Value unread_count = 9;
    bool unread_mark = 10;
    google.protobuf.Int64Value date2 = 11;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_deleteDialog {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getUserPinnedMessage {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_updateUserPinnedMessage {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
    int32 pinned_msg_id = 6;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_insertOrUpdateDialogFilter {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 id = 4;
    mtproto.DialogFilter dialog_filter = 5;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_deleteDialogFilter {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 id = 4;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_updateDialogFiltersOrder {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    repeated int32 order = 4;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getDialogFilters {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getDialogFolder {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 folder_id = 4;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_editPeerFolders {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    repeated int64 peer_dialog_list = 4;
    int32 folder_id = 5;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getChannelMessageReadParticipants {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int64 channel_id = 4;
    int32 msg_id = 5;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_setChatTheme {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
    string theme_emoticon = 6;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_setHistoryTTL {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
    int32 ttl_period = 6;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getMyDialogsData {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    bool user = 4;
    bool chat = 5;
    bool channel = 6;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getSavedDialogs {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    mtproto.Bool exclude_pinned = 4;
    int32 offset_date = 5;
    int32 offset_id = 6;
    mtproto.PeerUtil offset_peer = 7;
    int32 limit = 8;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getPinnedSavedDialogs {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_toggleSavedDialogPin {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    mtproto.PeerUtil peer = 4;
    mtproto.Bool pinned = 5;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_reorderPinnedSavedDialogs {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    mtproto.Bool force = 4;
    repeated mtproto.PeerUtil order = 5;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getDialogFilter {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 id = 4;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_getDialogFilterBySlug {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    string slug = 4;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_createDialogFilter {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    DialogFilterExt dialog_filter = 4;
}

//--------------------------------------------------------------------------------------------
message TL_dialog_updateUnreadCount {
    TLConstructor  constructor = 1;
    int64 user_id = 3;
    int32 peer_type = 4;
    int64 peer_id = 5;
    google.protobuf.Int32Value unread_count = 6;
    google.protobuf.Int32Value unread_mentions_count = 7;
    google.protobuf.Int32Value unread_reactions_count = 8;
}


//--------------------------------------------------------------------------------------------
// Vector api result type
message Vector_PeerWithDraftMessage {
    repeated PeerWithDraftMessage datas = 1;
}
message Vector_DialogPeer {
    repeated mtproto.DialogPeer datas = 1;
}
message Vector_DialogExt {
    repeated DialogExt datas = 1;
}
message Vector_DialogFilterExt {
    repeated DialogFilterExt datas = 1;
}
message Vector_DialogPinnedExt {
    repeated DialogPinnedExt datas = 1;
}
message Vector_Long {
    repeated int64 datas = 1;
}


//--------------------------------------------------------------------------------------------
// rpc

service RPCDialog {
 rpc dialog_saveDraftMessage(TL_dialog_saveDraftMessage) returns (mtproto.Bool) {}
 rpc dialog_clearDraftMessage(TL_dialog_clearDraftMessage) returns (mtproto.Bool) {}
 rpc dialog_getAllDrafts(TL_dialog_getAllDrafts) returns (Vector_PeerWithDraftMessage) {}
 rpc dialog_clearAllDrafts(TL_dialog_clearAllDrafts) returns (Vector_PeerWithDraftMessage) {}
 rpc dialog_markDialogUnread(TL_dialog_markDialogUnread) returns (mtproto.Bool) {}
 rpc dialog_toggleDialogPin(TL_dialog_toggleDialogPin) returns (mtproto.Int32) {}
 rpc dialog_getDialogUnreadMarkList(TL_dialog_getDialogUnreadMarkList) returns (Vector_DialogPeer) {}
 rpc dialog_getDialogsByOffsetDate(TL_dialog_getDialogsByOffsetDate) returns (Vector_DialogExt) {}
 rpc dialog_getDialogs(TL_dialog_getDialogs) returns (Vector_DialogExt) {}
 rpc dialog_getDialogsByIdList(TL_dialog_getDialogsByIdList) returns (Vector_DialogExt) {}
 rpc dialog_getDialogsCount(TL_dialog_getDialogsCount) returns (mtproto.Int32) {}
 rpc dialog_getPinnedDialogs(TL_dialog_getPinnedDialogs) returns (Vector_DialogExt) {}
 rpc dialog_reorderPinnedDialogs(TL_dialog_reorderPinnedDialogs) returns (mtproto.Bool) {}
 rpc dialog_getDialogById(TL_dialog_getDialogById) returns (DialogExt) {}
 rpc dialog_getTopMessage(TL_dialog_getTopMessage) returns (mtproto.Int32) {}
 rpc dialog_updateReadInbox(TL_dialog_updateReadInbox) returns (mtproto.Bool) {}
 rpc dialog_updateReadOutbox(TL_dialog_updateReadOutbox) returns (mtproto.Bool) {}
 rpc dialog_insertOrUpdateDialog(TL_dialog_insertOrUpdateDialog) returns (mtproto.Bool) {}
 rpc dialog_deleteDialog(TL_dialog_deleteDialog) returns (mtproto.Bool) {}
 rpc dialog_getUserPinnedMessage(TL_dialog_getUserPinnedMessage) returns (mtproto.Int32) {}
 rpc dialog_updateUserPinnedMessage(TL_dialog_updateUserPinnedMessage) returns (mtproto.Bool) {}
 rpc dialog_insertOrUpdateDialogFilter(TL_dialog_insertOrUpdateDialogFilter) returns (mtproto.Bool) {}
 rpc dialog_deleteDialogFilter(TL_dialog_deleteDialogFilter) returns (mtproto.Bool) {}
 rpc dialog_updateDialogFiltersOrder(TL_dialog_updateDialogFiltersOrder) returns (mtproto.Bool) {}
 rpc dialog_getDialogFilters(TL_dialog_getDialogFilters) returns (Vector_DialogFilterExt) {}
 rpc dialog_getDialogFolder(TL_dialog_getDialogFolder) returns (Vector_DialogExt) {}
 rpc dialog_editPeerFolders(TL_dialog_editPeerFolders) returns (Vector_DialogPinnedExt) {}
 rpc dialog_getChannelMessageReadParticipants(TL_dialog_getChannelMessageReadParticipants) returns (Vector_Long) {}
 rpc dialog_setChatTheme(TL_dialog_setChatTheme) returns (mtproto.Bool) {}
 rpc dialog_setHistoryTTL(TL_dialog_setHistoryTTL) returns (mtproto.Bool) {}
 rpc dialog_getMyDialogsData(TL_dialog_getMyDialogsData) returns (DialogsData) {}
 rpc dialog_getSavedDialogs(TL_dialog_getSavedDialogs) returns (SavedDialogList) {}
 rpc dialog_getPinnedSavedDialogs(TL_dialog_getPinnedSavedDialogs) returns (SavedDialogList) {}
 rpc dialog_toggleSavedDialogPin(TL_dialog_toggleSavedDialogPin) returns (mtproto.Bool) {}
 rpc dialog_reorderPinnedSavedDialogs(TL_dialog_reorderPinnedSavedDialogs) returns (mtproto.Bool) {}
 rpc dialog_getDialogFilter(TL_dialog_getDialogFilter) returns (DialogFilterExt) {}
 rpc dialog_getDialogFilterBySlug(TL_dialog_getDialogFilterBySlug) returns (DialogFilterExt) {}
 rpc dialog_createDialogFilter(TL_dialog_createDialogFilter) returns (DialogFilterExt) {}
 rpc dialog_updateUnreadCount(TL_dialog_updateUnreadCount) returns (mtproto.Bool) {}
}

